--- a/src/app/shared/component/productform/productform.component.html
+++ b/src/app/shared/component/productform/productform.component.html
@@ -6,7 +6,7 @@
                 <input type="text" name="usernmae" id="username" formControlName="username" class="form-control">
             </div>
             <div class="form-group">
-                <label for="username">username</label>
+                <label for="username">userdetails</label>
                 <textarea type="text" rows="4" name="usernmae" id="username" formControlName="userdetails"
                     class="form-control"></textarea>
             </div>
